test/functions/default-arguments/default-argument-value-constraint-mismatch.good
default-argument-value-constraint-mismatch.chpl:4: error: default value for formal 'x' does not match its type constraint
